--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,9 +1,31 @@
 .tamano{
-    height: 400px;
-    width: 400px;
+    max-width:260px;
+}
+
+.name{
+    font-weight:bold;
+    color:inherit;
 }
 
 .contorno{
-    padding: 2px;
-    
+    margin-right: auto;
+    box-shadow: 0px 10px 10px black;
+    color:#313437;
+    background-color:#eef4f7;
+    border: 5px;
+    height: 467px;
+    width: 402px;
 }
+.body_cont{
+    border: 5px;
+    height: 350px;
+    width: 400px;
+    text-align: justify;
+}
+
+
+
+
+
+
+
